# reader

android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/org/unknownplace/manga/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/unknownplace/manga/: MainActivity.kt  MangaGraph.kt  Shared.kt
android/app/src/main/java/org/unknownplace/manga/ui/components/: ChapterListItem.kt  MangaListItem.kt
android/app/src/main/java/org/unknownplace/manga/ui/screens/: ChapterListScreen.kt  ChapterListViewModel.kt  DataMigrationScreen.kt  DataMigrationViewModel.kt  MangaListScreen.kt  MangaListViewModel.kt  ReaderScreen.kt  ReaderViewModel.kt  SearchMangaScreen.kt  SearchMangaViewModel.kt
android/app/src/main/java/org/unknownplace/manga/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/uniffi/manga/: manga.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/org/unknownplace/manga/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml  build-android-lib.sh  build.rs
core/migrations/: 20240820231323_CreateTable.down.sql  20240820231323_CreateTable.up.sql
core/src/: db.rs  error.rs  lib.rs  log.rs  manga.udl
core/src/sites/: jmangaorg.rs  mangatopjp.rs  mod.rs  rawkuronet.rs  spoilerplustv.rs
