[package]
name = "mangareader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "manga"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
lazy_static = "1.5.0"
openssl = { version = "0.10.66", features = ["vendored"] }
regex = "1.10.6"
reqwest = "0.12.5"
scraper = "0.20.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["fs", "net", "rt-multi-thread", "time", "sync", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uniffi = { version = "0.28" }

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"
